--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,26 @@
 
 <body>
     <div class="wrapper">
-        操作
+        <div class="box">
+            <input type="text" value="No file seletend">
+            <button>Browse...</button>
+        </div>
+        <div class="box">
+            <input type="text" value="No file seletend">
+            <button>Browse...</button>
+        </div>
+        <div class="box">
+            <input type="text" value="No file seletend">
+            <button>Browse...</button>
+        </div>
+        <div class="box">
+            <input type="text" value="No file seletend">
+            <button>Browse...</button>
+        </div>
+        <div class="box">
+            <input type="text" value="No file seletend">
+            <button>Browse...</button>
+        </div>
     </div>
 </body>
 
